# mongo-app-on-container-example

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/service/: mod.rs
infra/k8s/: Makefile
infra/k8s/base/: config.yaml  kustomization.yaml
infra/k8s/base/db/: kustomization.yaml  mongo-0.yaml  mongo-1.yaml  mongo-2.yaml  stateful-set.yaml
infra/k8s/base/server/: deployment.yaml  service.yaml
infra/k8s/kind/: cluster.yaml
infra/k8s/overlays/kind/: kustomization.yaml  sever-deployment.yaml
web/: .gitignore  .parcelrc  package-lock.json  package.json  svelte.config.js  tsconfig.json
web/src/: App.svelte  api.ts  index.html  model.ts  store.ts
web/src/css/: styles.scss
