[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
axum = "0.5.7"
axum-extra = { version = "0.3.4", features = ["spa"] }
futures = "0.3.21"
mongodb = { git = "https://github.com/mongodb/mongo-rust-driver.git", tag="v2.3.0-beta"}
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.19.2", features = ["rt", "rt-multi-thread", "macros", "time"] }
tower = { version = "0.4.12", features = ["util", "timeout"] }
tower-http = { version = "0.3.4", features = ["trace", "cors"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
